# OpenModelicaPython3Image

./: .pre-commit-config.yaml  README.md  build.py  cache.toml  config-full.toml  config.toml  pyproject.toml  subprocess_pb2.py  subprocess_pb2_grpc.py  subprocess_pb2_grpc.pyi
.pre-commit/: uic.py
neo/: Dockerfile  __init__.py  __main__.py
omcpyimage/: Dockerfile  Dockerfile.bak  Dockerfile.in  __init__.py  __main__.py  _api.py  _apis.py  _decorators.py  _schema.py  _types.py  builder.py  config.py  types.py  util.py
omcpyimage/model/: __init__.py  builder.py
omcpyimage/ui/: mainwindow.py
omcpyimage/v0_1/: 2x2.sh  Dockerfile  FinalStage.in  OpenModelicaStage.in  PythonStage.in  __init__.py  __main__.py  annotation.py  full.sh  latest.sh  omc_patch.py  test.py  version.py
omcpyimage/v0_1/model/: __init__.py  constant.py  docker.py  findversion.py
omcpyimage/v0_1/ui/: mainwindow.py
omcpyimage/v0_1/widget/: mainwindow.py
omcpyimage/widget/: mainwindow.py
src/protobuf/: subprocess.proto
src/ui/: mainwindow.ui
src/v0_1/ui/: mainwindow.ui
tests/: test_omc_version.py  test_version.py
