[tool.poetry]
name = "openmodelicawithpythonimage"
version = "0.0.0"
description = ""
authors = ["ijknabla <ijknabla@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "omcpyimage"},
]

[tool.poetry.scripts]
omcpyimage = "omcpyimage.__main__:main"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.1"
aiohttp = "^3.8.3"
lxml = "^4.9.2"
toml = "^0.10.2"
schema = "^0.7.5"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
mypy = "^0.991"
pyproject-flake8 = "^6.0.0.post1"
types-toml = "^0.10.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79

[tool.flake8]
exclude = ".venv"

[tool.isort]
profile = "black"
line_length = 79

[[tool.mypy.overrides]]
module = [
    "lxml.*",
]
ignore_missing_imports = true
